--- a/index.html
+++ b/index.html
@@ -1,11 +1,134 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		
-	</title>
+	<title>Shop</title>
 </head>
 <body>
+	<header>
+		<img src="./img/logo.svg" alt="logo">
+		<img src="./img/loupe.svg" alt="loupe">
+		<button><img src="./img/menu.svg" alt="menu"></button>
+		<a href="#"><img src="./img/reg.svg" alt="reg"></a>
+		<a href="#"><img src="./img/basket.svg" alt="basket"></a>
+	</header>
+
+	<section>
+		<img src="./img/man.png" alt="man">
+		<p>THE BRAND OF LUXERIOUS FASHION</p>
+	</section>
+
+	<section>
+		<ul>
+			<li>
+				<img src="./img/forwomen.svg">
+				<h3>FOR WOMEN</h3>
+				<p>30% OFF</p>
+			</li>
+			<li>
+				<img src="./img/formen.svg">
+				<h3>FOR MEN</h3>
+				<p>HOT DEAL</p>
+			</li>
+			<li>
+				<img src="./img/forkids.svg">
+				<h3>FOR KIDS</h3>
+				<p>NEW ARRIVALS</p>
+			</li>
+			<li>
+				<img src="./img/accesories.svg">
+				<h3>ACCESORIES</h3>
+				<p>LUXIROUS & TRENDY</p>
+			</li>
+		</ul>
+	</section>
+
+	<section>
+		<h3>Fetured Items</h3>
+		<p>Shop for items based on what we featured in this week</p>
+		<ul>
+			<li>
+				<img src="./img/secondsection1.svg">
+				<h3>ELLERY X M'O CAPSULE</h3>
+				<p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+				<p>$52.00</p>
+			</li>
+
+			<li>
+				<img src="./img/secondsection2.svg">
+				<h3>ELLERY X M'O CAPSULE</h3>
+				<p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+				<p>$52.00</p>
+			</li>
+			
+			<li>
+				<img src="./img/secondsection3.svg">
+				<h3>ELLERY X M'O CAPSULE</h3>
+				<p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+				<p>$52.00</p>
+			</li>
+			
+			<li>
+				<img src="./img/secondsection4.svg">
+				<h3>ELLERY X M'O CAPSULE</h3>
+				<p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+				<p>$52.00</p>
+			</li>
+			
+			<li>
+				<img src="./img/secondsection5.svg">
+				<h3>ELLERY X M'O CAPSULE</h3>
+				<p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+				<p>$52.00</p>
+			</li>
+			
+			<li>
+				<img src="./img/secondsection6.svg">
+				<h3>ELLERY X M'O CAPSULE</h3>
+				<p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+				<p>$52.00</p>
+			</li>
+		</ul>
+		<button>Browse All Product</button>
+	</section>
+
+	<section>
+		<ul>
+			<li>
+				<img src="./img/deliverylogo.png">
+				<h3>Free Delivery</h3>
+				<p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+			</li>
+			
+			<li>
+				<img src="./img/saleslogo.png">
+				<h3>Sales & discounts</h3>
+				<p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+			</li>
+			
+			<li>
+				<img src="./img/qualitylogo.png">
+				<h3>Quality assurance</h3>
+				<p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+			</li>
+		</ul>
+	</section>
+
+	<section>
+		<img src="#">
+		<p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+		<p><span>SUBSCRIBE</span>FOR OUR NEWLETTER AND PROMOTION</p>
+		<input type="email" name="email" placeholder="Enter Your Email">
+		<button>Subscribe</button>
+	</section>
+	
+	<footer>
+	<p>© 2021  Brand  All Rights Reserved.</p>
+	<img src="./img/facebook.jpg">
+	<img src="./img/instagramm.png">
+	<img src="./img/pinterest.png">
+	<img src="./img/twitter.png">
+
+	</footer>
 
 </body>
 </html>
